fix: Fix some issues in temporary code generation and user category setting